syntax = "proto3";
package node;
option go_package = "google.golang.org/protobuf/types/known/nodepb";

service NodeService {
    rpc Login(Object) returns (Object);
    rpc CreateNode(Object) returns (Object);
    rpc ReadNode(Object) returns (Object);
    rpc UpdateNode(Object) returns (Object);
    rpc DeleteNode(Object) returns (Object);
    rpc GetPeers(Object) returns (Object);
    rpc GetExtPeers(Object) returns (Object);
    rpc CheckIn(Object) returns (Object);
}

message Object {  
    string Data = 1;
    string Type = 2;
    string Metadata = 3;
}
